--- a/packages/webpack-plugin/src/index.html
+++ b/packages/webpack-plugin/src/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>webpack4 demo1</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-
-<h1>学习 webpack4 配置使用</h1>
-
-<script src="./src/main.js"></script>
+  <div id="root">
+    <h1>学习 webpack4 配置使用</h1>
+    请看 console
+    <!-- shell -->
+  </div>
+  <!-- built files will be auto injected -->
 </body>
 </html>
